openturns/1.20/_sources/auto_functional_modeling/vectorial_functions/index.rst.txt


.. _sphx_glr_auto_functional_modeling_vectorial_functions:

.. _Vectorial functions:

Vectorial functions
-------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a composed function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_composed_function_thumb.png
    :alt: Create a composed function

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_composed_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a composed function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a parametric function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_parametric_function_thumb.png
    :alt: Create a parametric function

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_parametric_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a parametric function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create an aggregated function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_aggregated_function_thumb.png
    :alt: Create an aggregated function

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_aggregated_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create an aggregated function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a linear combination of functions">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_linear_combination_function_thumb.png
    :alt: Create a linear combination of functions

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_linear_combination_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a linear combination of functions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a symbolic function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_symbolic_function_thumb.png
    :alt: Create a symbolic function

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_symbolic_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a symbolic function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a quadratic function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_quadratic_function_thumb.png
    :alt: Create a quadratic function

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_quadratic_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a quadratic function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a Python function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_python_function_thumb.png
    :alt: Create a Python function

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_python_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a Python function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Defining Python and symbolic functions: a quick start introduction to functions">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_quick_start_functions_thumb.png
    :alt: Defining Python and symbolic functions: a quick start introduction to functions

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_quick_start_functions.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Defining Python and symbolic functions: a quick start introduction to functions</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/vectorial_functions/plot_composed_function
   /auto_functional_modeling/vectorial_functions/plot_parametric_function
   /auto_functional_modeling/vectorial_functions/plot_aggregated_function
   /auto_functional_modeling/vectorial_functions/plot_linear_combination_function
   /auto_functional_modeling/vectorial_functions/plot_symbolic_function
   /auto_functional_modeling/vectorial_functions/plot_quadratic_function
   /auto_functional_modeling/vectorial_functions/plot_python_function
   /auto_functional_modeling/vectorial_functions/plot_quick_start_functions

