openturns/1.26/_sources/auto_functional_modeling/vectorial_functions/index.rst.txt


.. _sphx_glr_auto_functional_modeling_vectorial_functions:

.. _Vectorial functions:

Vectorial functions
-------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a composed function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_composed_function_thumb.png
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_composed_function`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a composed function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create an aggregated function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_aggregated_function_thumb.png
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_aggregated_function`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create an aggregated function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a symbolic function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_symbolic_function_thumb.svg
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_symbolic_function`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a symbolic function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a linear combination of functions">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_linear_combination_function_thumb.png
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_linear_combination_function`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a linear combination of functions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a quadratic function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_quadratic_function_thumb.svg
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_quadratic_function`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a quadratic function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Increase the output dimension of a function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_functions_outputDim_thumb.png
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_functions_outputDim`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Increase the output dimension of a function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a parametric function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_parametric_function_thumb.png
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_parametric_function`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a parametric function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a Python function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_python_function_thumb.png
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_python_function`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a Python function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Increase the input dimension of a function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_functions_inputDim_thumb.png
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_functions_inputDim`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Increase the input dimension of a function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Defining Python and symbolic functions: a quick start introduction to functions">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_quick_start_functions_thumb.png
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_quick_start_functions`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Defining Python and symbolic functions: a quick start introduction to functions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create multivariate functions">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_create_multivariate_function_thumb.png
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_create_multivariate_function`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create multivariate functions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Get the gradient and Hessian as functions">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_functions_grad_hess_thumb.png
    :alt:

  :doc:`/auto_functional_modeling/vectorial_functions/plot_functions_grad_hess`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get the gradient and Hessian as functions</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/vectorial_functions/plot_composed_function
   /auto_functional_modeling/vectorial_functions/plot_aggregated_function
   /auto_functional_modeling/vectorial_functions/plot_symbolic_function
   /auto_functional_modeling/vectorial_functions/plot_linear_combination_function
   /auto_functional_modeling/vectorial_functions/plot_quadratic_function
   /auto_functional_modeling/vectorial_functions/plot_functions_outputDim
   /auto_functional_modeling/vectorial_functions/plot_parametric_function
   /auto_functional_modeling/vectorial_functions/plot_python_function
   /auto_functional_modeling/vectorial_functions/plot_functions_inputDim
   /auto_functional_modeling/vectorial_functions/plot_quick_start_functions
   /auto_functional_modeling/vectorial_functions/plot_create_multivariate_function
   /auto_functional_modeling/vectorial_functions/plot_functions_grad_hess

